[project]
name = "ocsjs-ai-answer-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=2.0.1",
    "flask-cors>=3.0.10",
    "gunicorn>=20.1.0",
    "markdown>=3.9",
    "openai>=1.0.0",
    "python-dotenv>=0.19.1",
]
